--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@200;300;700&family=Staatliches&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <title>Verma & Co. | A Trusted Brand</title>
 </head>
 <body>
@@ -51,7 +53,7 @@
     <div id="Practice-Areas">
         <div class="container">
             <div class="grid-items">
-                <div>
+                <div >
                     <h1><span>PRACTICE</span><br>AREAS</h1>
                 </div>
                 <div >
