--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                         <div>
                             <div class="form-textarea">
                                 <label for="Message*">Message*</label>
-                                <textarea name="Message" id="" 
-                                cols="50" rows="20"></textarea>
+                                <textarea name="Message" id="Message" 
+                                cols="50"  rows="20"></textarea>
                             </div>
                         </div>
                     </div>
