Added menu responsiveness and form functionality in netlify

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <p><span>Tel:</span> +91 190-173-7834</p>
                     <p>For any general inquiries, 
                         please fill in the following contact form:</p>
-                    <div class="flex-form">
+                    <form name="contact" method="POST"  class="flex-form" netlify>
                         <div>
                             <div class="form-control">
                                 <label for="First_Name">First Name*</label>
@@ -218,7 +218,7 @@
                                 cols="50"  rows="20"></textarea>
                             </div>
                         </div>
-                    </div>
+                    </form>
                     <div class="btn">
                         <input type="submit" value="Submit" id="submit" 
                         class="btn-outline"
